--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 Hello World
+<svg width="100" height="100">
+  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+</svg>
