--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-Hello World
-<svg width="100" height="100">
-  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+<svg width="300" height="300">
+  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="green" />
+  <circle cx="50" cy="150" r="40" stroke="green" stroke-width="4" fill="blue" />
+  <circle cx="50" cy="250" r="40" stroke="green" stroke-width="2" fill="yellow" />
+  <circle cx="150" cy="50" r="40" stroke="green" stroke-width="4" fill="red" />
+  <circle cx="150" cy="150" r="40" stroke="green" stroke-width="4" fill="white" />
+  <circle cx="150" cy="250" r="40" stroke="green" stroke-width="4" fill="orange" />
+  <circle cx="250" cy="50" r="40" stroke="green" stroke-width="4" fill="red" />
+  <circle cx="250" cy="150" r="40" stroke="green" stroke-width="4" fill="white" />
+  <circle cx="250" cy="250" r="40" stroke="green" stroke-width="4" fill="orange" />
 </svg>
