--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <svg width="300" height="300">
-  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="green" />
-  <circle cx="50" cy="150" r="40" stroke="green" stroke-width="4" fill="blue" />
-  <circle cx="50" cy="250" r="40" stroke="green" stroke-width="2" fill="yellow" />
-  <circle cx="150" cy="50" r="40" stroke="green" stroke-width="4" fill="red" />
-  <circle cx="150" cy="150" r="40" stroke="green" stroke-width="4" fill="white" />
-  <circle cx="150" cy="250" r="40" stroke="green" stroke-width="4" fill="orange" />
-  <circle cx="250" cy="50" r="40" stroke="green" stroke-width="4" fill="red" />
-  <circle cx="250" cy="150" r="40" stroke="green" stroke-width="4" fill="white" />
-  <circle cx="250" cy="250" r="40" stroke="green" stroke-width="4" fill="orange" />
+  <circle cx="65" cy="65" r="30" stroke="black" stroke-width="2" fill="green" />
+  <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
+  <circle cx="65" cy="235" r="30" stroke="black" stroke-width="2" fill="yellow" />
+  <circle cx="150" cy="50" r="30" stroke="black" stroke-width="2" fill="red" />
+  <circle cx="150" cy="150" r="40" stroke="black" stroke-width="2" fill="white" />
+  <circle cx="150" cy="250" r="30" stroke="black" stroke-width="2" fill="orange" />
+  <circle cx="235" cy="65" r="30" stroke="black" stroke-width="2" fill="brown" />
+  <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="gray" />
+  <circle cx="235" cy="235" r="30" stroke="black" stroke-width="2" fill="lime" />
 </svg>
