--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <svg width="300" height="300">
+  <g transform = "translate(150, 150) rotate(45 60 60)">
   <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
   <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
   <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
@@ -8,4 +9,5 @@
   <circle cx="220" cy="80" r="30" stroke="black" stroke-width="2" fill="brown" />
   <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="gray" />
   <circle cx="220" cy="220" r="30" stroke="black" stroke-width="2" fill="lime" />
+  </g>
 </svg>
