--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <svg width="300" height="300">
-  <g transform = "rotate(45 60 60)">
+  <g transform="rotate(15)">
   <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
   <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
   <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
