--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <svg width="300" height="300">
-  <g transform="translate(-150, -150) rotate(22.5) translate(150, 150)">
+  <g transform="rotate(22.5) translate(0, 0)">
   <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
   <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
   <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
