--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<svg width="300" height="300" style="display: block; margin: auto;">
+<svg width="300" height="300" style="display: block; margin: auto auto;">
   <g transform="rotate(22.5) translate(45, -70)">
   <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
   <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
