--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<svg width="300" height="300" style="display: block; position: absolute; left:50%; top:50%; margin-left: -150px; margin-top: -150px;">
-  <g transform="rotate(22.5) translate(45, -70)">
-  <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
-  <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="blue" />
-  <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
-  <circle cx="150" cy="50" r="30" stroke="black" stroke-width="2" fill="red" />
-  <circle cx="150" cy="150" r="50" stroke="black" stroke-width="2" fill="white" />
-  <circle cx="150" cy="250" r="30" stroke="black" stroke-width="2" fill="orange" />
-  <circle cx="220" cy="80" r="30" stroke="black" stroke-width="2" fill="brown" />
-  <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="gray" />
-  <circle cx="220" cy="220" r="30" stroke="black" stroke-width="2" fill="lime" />
-  </g>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+    width="300" height="300" style="display: block; position: absolute; left:50%; top:50%; margin-left: -150px; margin-top: -150px;">
+    <defs>
+        <pattern id="facebook_icon" x="0" y="0" patternUnits="userSpaceOnUse" height="60" width="60">
+            <image x="0" y="0" xlink:href="https://upload.wikimedia.org/wikipedia/commons/c/c2/F_icon.svg"></image>
+        </pattern>
+    </defs>
+    <g transform="rotate(22.5) translate(45, -70)">
+    <a xlink:href="http://www.w3.org">
+        <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="green" />
+    </a>
+    <a xlink:href="https://www.facebook.com/twoem">
+        <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="url(#facebook_icon)" />
+    </a>
+    <a xlink:href="https://www.linkedin.com/in/matyasmarkovics">
+        <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
+    </a>
+    <a xlink:href="https://www.flickr.com/photos/40606896@N02/">
+        <circle cx="150" cy="50" r="30" stroke="black" stroke-width="2" fill="red" />
+    </a>
+    <a xlink:href="http://www.w3.org">
+        <circle cx="150" cy="150" r="50" stroke="black" stroke-width="2" fill="white" />
+    </a>
+    <a xlink:href="https://issuu.com/matyasmarkovics8">
+        <circle cx="150" cy="250" r="30" stroke="black" stroke-width="2" fill="orange" />
+    </a>
+    <a xlink:href="http://www.w3.org">
+        <circle cx="220" cy="80" r="30" stroke="black" stroke-width="2" fill="brown" />
+    </a>
+    <a xlink:href="https://www.youtube.com/channel/UCvcXOlbZy7tqyFVKfAcLiKA">
+        <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="gray" />
+    </a>
+    <a xlink:href="https://github.com/matyasmarkovics">
+        <circle cx="220" cy="220" r="30" stroke="black" stroke-width="2" fill="lime" />
+    </a>
+    </g>
 </svg>
