--- a/index.html
+++ b/index.html
@@ -1,36 +1,59 @@
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
     width="300" height="300" style="display: block; position: absolute; left:50%; top:50%; margin-left: -150px; margin-top: -150px;">
     <defs>
-    <text id="Facebooktext" x="0" y="0" font-family="sans-serif" font-size="30px" fill="blue">facebook</text>
-    <image  id="Facebookicon" x="0" y="0" height="60" width="60" xlink:href="https://upload.wikimedia.org/wikipedia/commons/c/c2/F_icon.svg"></image>
+      <pattern id="FacebookIcon" x="0" y="0" width="1" height="1">
+        <!-- <image x="0" y="0" height="60" width="60" xlink:href="https://upload.wikimedia.org/wikipedia/commons/c/c2/F_icon.svg" /> -->
+        <rect x="0" y="0" width="60" height="60" fill="blue" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >facebook</text>
+      </pattern>
+      <pattern id="LinkedInIcon" x="0" y="0" width="1" height="1">
+        <rect x="0" y="0" width="60" height="60" fill="lightblue" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >in</text>
+      </pattern>
+      <pattern id="FlickrIcon" x="0" y="0" width="1" height="1">
+        <rect x="0" y="0" width="60" height="60" fill="#ff0084" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >fr</text>
+      </pattern>
+      <pattern id="IssuuIcon" x="0" y="0" width="1" height="1">
+        <rect x="0" y="0" width="60" height="60" fill="orange" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >issuu</text>
+      </pattern>
+      <pattern id="YouTubeIcon" x="0" y="0" width="1" height="1">
+        <rect x="0" y="0" width="60" height="60" fill="red" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >tube</text>
+      </pattern>
+      <pattern id="GitHubIcon" x="0" y="0" width="1" height="1">
+        <rect x="0" y="0" width="60" height="60" fill="gray" />
+        <text x="10" y="50" font-family="Verdana" font-size="55" fill="white" >github</text>
+      </pattern>
     </defs>
     <g transform="rotate(22.5) translate(45, -70)">
     <a xlink:href="http://www.w3.org">
-        <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="url(#Facebooktext)" />
+        <circle cx="80" cy="80" r="30" stroke="black" stroke-width="2" fill="blue" />
     </a>
     <a xlink:href="https://www.facebook.com/twoem">
-        <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="url(#Facebookicon)" />
+        <circle cx="50" cy="150" r="30" stroke="black" stroke-width="2" fill="url(#FacebookIcon)" />
     </a>
     <a xlink:href="https://www.linkedin.com/in/matyasmarkovics">
-        <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="yellow" />
+        <circle cx="80" cy="220" r="30" stroke="black" stroke-width="2" fill="url(#LinkedInIcon)" />
     </a>
     <a xlink:href="https://www.flickr.com/photos/40606896@N02/">
-        <circle cx="150" cy="50" r="30" stroke="black" stroke-width="2" fill="red" />
+        <circle cx="150" cy="50" r="30" stroke="black" stroke-width="2" fill="url(#FlickrIcon)" />
     </a>
     <a xlink:href="http://www.w3.org">
         <circle cx="150" cy="150" r="50" stroke="black" stroke-width="2" fill="white" />
     </a>
     <a xlink:href="https://issuu.com/matyasmarkovics8">
-        <circle cx="150" cy="250" r="30" stroke="black" stroke-width="2" fill="orange" />
+        <circle cx="150" cy="250" r="30" stroke="black" stroke-width="2" fill="url(#IssuuIcon)" />
     </a>
     <a xlink:href="http://www.w3.org">
         <circle cx="220" cy="80" r="30" stroke="black" stroke-width="2" fill="brown" />
     </a>
     <a xlink:href="https://www.youtube.com/channel/UCvcXOlbZy7tqyFVKfAcLiKA">
-        <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="gray" />
+        <circle cx="250" cy="150" r="30" stroke="black" stroke-width="2" fill="url(#YouTubeIcon)" />
     </a>
     <a xlink:href="https://github.com/matyasmarkovics">
-        <circle cx="220" cy="220" r="30" stroke="black" stroke-width="2" fill="lime" />
+        <circle cx="220" cy="220" r="30" stroke="black" stroke-width="2" fill="url(#GitHubIcon)" />
     </a>
     </g>
 </svg>
