--- a/index.html
+++ b/index.html
@@ -64,3 +64,5 @@
     </a>
     </g>
 </svg>
+<div data-configid="7468835/11794430" style="width:800px; height:565px;" class="issuuembed"></div>
+<script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
